:snowflake: .gitconfig을 cross-platform 친화적으로 변경하라
- .gitconfig: set autocrlf to `false`, set eol to `lf`
- README.md:
    - 특징섹션 추가하고 line ending 내용
    - windows에서 dotfile 첫 cloning 이후에 symlink 설치하는 법
- bootstrap.windows.exclude.ps1: README.md 파일은 Symlink 추적대상제외

--- a/.gitconfig
+++ b/.gitconfig
@@ -54,8 +54,9 @@
 		git branch | gawk '/^\\*/{print $2}'"
 [core]
 	quotepath = off
-	autocrlf = true
+	autocrlf = false
 	editor = 'c:/Utils/Vim/vim82/gvim.exe' -f -i NONE
+	eol = lf
 [diff]
 	tool = beyondcompare4
 	# tool = winmerge
