여러가지를 고침 detail은 내용참조 .gitconfig : difftool에 beyond compare 추가 .gitignore : 필요없는 신규 추가파일 .vim/~/markdown.vim : indent 설정 변경 .vim/~/vimwikiauto.vim : 기본 frontmatter 에 fontawe field 추가 .vimrc : 	neovim 지원용 설정 추가,         플러그인 3개 추가 ( neovim-gui-shim, vim-characterize, vim-repeat ) 	line number 표시가 상대적으로 되도록 변경         vim 에디터 폰트 변경         nerdtree 설정 변경         epub 설정 추가g SymLinks.csv : 신규 컴퓨터 설치시 Nerdtree 북마크도 재설치했으나 제거함 .vim/after/indent/markdown.vim : markdown auto indent를 지원하기 위한 파일 .vim/indent/markdown.vim :  markdown auto indent를 지원하기 위한 파일

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 /.vim/sessions
 # python 파일에서 빌드되는 바이너리는 제외함 
 /.vim/pythonx/__pycache__
+# history파일 보존필요없음. 설명 : https://stackoverflow.com/a/9850662/9457247
+/.vim/.netrwhist
 
 # Local configuration files
 *.local
