--- a/.gitconfig
+++ b/.gitconfig
@@ -87,3 +87,5 @@
 [i18n]
 	commitEncoding = utf8
 	logOutputEncoding = utf8
+[difftool "bc"]
+	path = C:\\Program Files\\Beyond Compare 4\\BComp.exe
